# UR10e-RAMS

./: .gitignore  README.md
ur10e/: CMakeLists.txt  package.xml
ur10e_control/: CMakeLists.txt  moveit2_tutorials.repos  package.xml
ur10e_control/csv/: 9x9_sample_xyz_arm.csv
ur10e_control/launch/: coord_control.launch.py  draw_x.launch.py  load_world.launch.py  moveit_control.launch.py
ur10e_control/src/: coord_control.cpp  coord_control_new.cpp  simple_control.cpp  task_constructor.cpp
ur10e_description/: CMakeLists.txt  package.xml
ur10e_description/config/: initial_positions.yaml  robotiq_controllers.yaml  ur10e_controllers.yaml  ur10e_robotiq_controllers.yaml  visual_parameters.yaml
ur10e_description/launch/: view.launch.py
ur10e_description/rviz/: view_robot.rviz
ur10e_description/urdf/: robotiq_2f_85_urdf.xacro  robotiq_gripper.ros2_control.xacro  ur.ros2_control.xacro  ur10e_robotiq_2f_85.urdf  ur10e_robotiq_2f_85.urdf.xacro  ur10e_urdf.xacro  ur_macro.xacro  ur_to_robotiq_adapter.urdf.xacro
ur10e_description/worlds/: A23.sdf
ur10e_description/worlds/models/Frame/: model.config  model.sdf
ur10e_description/worlds/models/Table Top/: model.config  model.sdf
ur10e_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur10e_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  ur10e_robotiq.ros2_control.xacro  ur10e_robotiq.srdf  ur10e_robotiq.urdf.xacro
ur10e_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ur10e_sim/: CMakeLists.txt  package.xml
ur10e_sim/env-hooks/: ur10e_sim.sh.in
ur10e_sim/launch/: gz_sim.launch.py
