<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur10e</name>
  <version>0.0.0</version>
  <description>Package for the UR10e within the RAMS Lab (Metapackage)</description>
  <maintainer email="sannatwill@gmail.com">willnatsan</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ur10e_description</exec_depend>
  <exec_depend>ur10e_sim</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
